# WUT-CUDA-SGM

./: .gitignore  CMakeLists.txt  LICENSE  compile_commands.json  run.sh
include/: Device_buffer.hpp  Parameters.hpp  internal.h  kmrosgm.h  kmrosgm_config.h  kmrosgm_config.h.in  kmrosgm_wrapper.h  types.hpp
sample/: CMakeLists.txt  stereosgm_image.cpp
src/: CMakeLists.txt  Census_transform.cu  Census_transform.hpp  Choose_disparities.cu  Energy.cu  Energy.hpp  Energy_horizontal.cu  Energy_oblique.cu  Energy_sum.cu  Energy_vertical.cu  Engine_SGM.cu  Engine_SGM.hpp  IEngine_SGM.hpp  Matching_cost.cu  Matching_cost.hpp  Median_filter.cu  Median_filter.hpp  Path_aggregation.cu  Path_aggregation.hpp  Stereo_SGM.cpp  Stereo_SGM.hpp  Winner_Takes_All.cu  Winner_Takes_All.hpp  census_transform.cu  census_transform.hpp
